Bug 472824 promptPassword should unescape user names before use. r=dolkse,sr=mconnor
UltraBlame original commit: 5542884b9bdc8c0f14ecafd788628098d366bd45

--- a/toolkit/components/passwordmgr/test/test_prompt.html
+++ b/toolkit/components/passwordmgr/test/test_prompt.html
@@ -277,6 +277,9 @@ tmplogin
 login1
 login2A
 login2B
+login2C
+login2D
+login2E
 login3A
 login3B
 login4
@@ -389,6 +392,84 @@ nsILoginInfo
 )
 ;
 login2B
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+login
+-
+manager
+/
+loginInfo
+;
+1
+"
+]
+.
+createInstance
+(
+Ci
+.
+nsILoginInfo
+)
+;
+login2C
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+login
+-
+manager
+/
+loginInfo
+;
+1
+"
+]
+.
+createInstance
+(
+Ci
+.
+nsILoginInfo
+)
+;
+login2D
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+login
+-
+manager
+/
+loginInfo
+;
+1
+"
+]
+.
+createInstance
+(
+Ci
+.
+nsILoginInfo
+)
+;
+login2E
 =
 Cc
 [
@@ -596,6 +677,117 @@ user2pass
 "
 )
 ;
+login2C
+.
+init
+(
+"
+http
+:
+/
+/
+example2
+.
+com
+"
+null
+"
+http
+:
+/
+/
+example2
+.
+com
+"
+"
+user3
+.
+name
+host
+"
+"
+user3pass
+"
+"
+"
+"
+"
+)
+;
+login2D
+.
+init
+(
+"
+http
+:
+/
+/
+example2
+.
+com
+"
+null
+"
+http
+:
+/
+/
+example2
+.
+com
+"
+"
+100
+beef
+"
+"
+user3pass
+"
+"
+"
+"
+"
+)
+;
+login2E
+.
+init
+(
+"
+http
+:
+/
+/
+example2
+.
+com
+"
+null
+"
+http
+:
+/
+/
+example2
+.
+com
+"
+"
+100
+%
+beef
+"
+"
+user3pass
+"
+"
+"
+"
+"
+)
+;
 login3A
 .
 init
@@ -710,6 +902,27 @@ pwmgr
 .
 addLogin
 (
+login2C
+)
+;
+pwmgr
+.
+addLogin
+(
+login2D
+)
+;
+pwmgr
+.
+addLogin
+(
+login2E
+)
+;
+pwmgr
+.
+addLogin
+(
 login3A
 )
 ;
@@ -766,6 +979,27 @@ pwmgr
 removeLogin
 (
 login2B
+)
+;
+pwmgr
+.
+removeLogin
+(
+login2C
+)
+;
+pwmgr
+.
+removeLogin
+(
+login2D
+)
+;
+pwmgr
+.
+removeLogin
+(
+login2E
 )
 ;
 pwmgr
@@ -4515,6 +4749,301 @@ pword
 value
 "
 user2pass
+"
+"
+Checking
+returned
+password
+"
+)
+;
+/
+/
+=
+=
+=
+=
+=
+test
+17
+=
+=
+=
+=
+=
+/
+/
+No
+default
+password
+provided
+matching
+login
+is
+returned
+w
+/
+o
+prompting
+.
+testNum
++
++
+;
+pword
+.
+value
+=
+null
+;
+isOk
+=
+prompter1
+.
+promptPassword
+(
+dialogTitle
+(
+)
+dialogText
+"
+http
+:
+/
+/
+user3
+%
+2Ename
+%
+40host
+example2
+.
+com
+"
+Ci
+.
+nsIAuthPrompt
+.
+SAVE_PASSWORD_NEVER
+pword
+)
+;
+ok
+(
+isOk
+"
+Checking
+dialog
+return
+value
+(
+accept
+)
+"
+)
+;
+is
+(
+pword
+.
+value
+"
+user3pass
+"
+"
+Checking
+returned
+password
+"
+)
+;
+/
+/
+=
+=
+=
+=
+=
+test
+18
+=
+=
+=
+=
+=
+/
+/
+No
+default
+password
+provided
+matching
+login
+is
+returned
+w
+/
+o
+prompting
+.
+testNum
++
++
+;
+pword
+.
+value
+=
+null
+;
+isOk
+=
+prompter1
+.
+promptPassword
+(
+dialogTitle
+(
+)
+dialogText
+"
+http
+:
+/
+/
+100
+beef
+example2
+.
+com
+"
+Ci
+.
+nsIAuthPrompt
+.
+SAVE_PASSWORD_NEVER
+pword
+)
+;
+ok
+(
+isOk
+"
+Checking
+dialog
+return
+value
+(
+accept
+)
+"
+)
+;
+is
+(
+pword
+.
+value
+"
+user3pass
+"
+"
+Checking
+returned
+password
+"
+)
+;
+/
+/
+=
+=
+=
+=
+=
+test
+19
+=
+=
+=
+=
+=
+/
+/
+No
+default
+password
+provided
+matching
+login
+is
+returned
+w
+/
+o
+prompting
+.
+testNum
++
++
+;
+pword
+.
+value
+=
+null
+;
+isOk
+=
+prompter1
+.
+promptPassword
+(
+dialogTitle
+(
+)
+dialogText
+"
+http
+:
+/
+/
+100
+%
+25beef
+example2
+.
+com
+"
+Ci
+.
+nsIAuthPrompt
+.
+SAVE_PASSWORD_NEVER
+pword
+)
+;
+ok
+(
+isOk
+"
+Checking
+dialog
+return
+value
+(
+accept
+)
+"
+)
+;
+is
+(
+pword
+.
+value
+"
+user3pass
 "
 "
 Checking
