Bug 424814: Update prototype test suite to 1.6.0.2, patch by harthur, r=sdwilsh
UltraBlame original commit: 6eb627215b618ad6faf2f738305ada9f3430c6f0

--- a/dom/tests/mochitest/ajax/prototype/test/test.css
+++ b/dom/tests/mochitest/ajax/prototype/test/test.css
@@ -59,9 +59,15 @@ bottom
 2em
 ;
 }
-#
+.
 logsummary
 {
+margin
+-
+top
+:
+1em
+;
 margin
 -
 bottom
@@ -86,7 +92,7 @@ weight
 bold
 ;
 }
-#
+.
 logtable
 {
 width
@@ -108,10 +114,10 @@ dotted
 666
 ;
 }
-#
+.
 logtable
 td
-#
+.
 logtable
 th
 {
@@ -134,7 +140,7 @@ dotted
 666
 ;
 }
-#
+.
 logtable
 .
 passed
@@ -147,11 +153,11 @@ color
 cfc
 ;
 }
-#
+.
 logtable
 .
 failed
-#
+.
 logtable
 .
 error
@@ -164,7 +170,7 @@ color
 fcc
 ;
 }
-#
+.
 logtable
 td
 div
@@ -176,7 +182,7 @@ display
 inline
 ;
 }
-#
+.
 logtable
 td
 div
