Bug 473345: check DOM worker loads against the classifier.  r=bent, sr=jonas
UltraBlame original commit: 69091a5fa62a941537d17a150a91324f9cc42a5a

--- a/toolkit/components/url-classifier/tests/mochitest/test_classifier_worker.html
+++ b/toolkit/components/url-classifier/tests/mochitest/test_classifier_worker.html
@@ -200,10 +200,27 @@ var
 testData
 =
 "
-malware
+example
 .
 com
 /
+tests
+/
+toolkit
+/
+components
+/
+url
+-
+classifier
+/
+tests
+/
+mochitest
+/
+evilWorker
+.
+js
 "
 ;
 var
@@ -224,7 +241,7 @@ simple
 \
 nad
 :
-1
+550
 \
 n
 "
@@ -232,7 +249,7 @@ n
 "
 a
 :
-524
+550
 :
 32
 :
@@ -390,7 +407,29 @@ testFrame
 src
 =
 "
-classifierFrame
+http
+:
+/
+/
+example
+.
+com
+/
+tests
+/
+toolkit
+/
+components
+/
+url
+-
+classifier
+/
+tests
+/
+mochitest
+/
+workerFrame
 .
 html
 "
@@ -515,6 +554,75 @@ ex
 ;
 }
 }
+function
+onmessage
+(
+event
+)
+{
+var
+pieces
+=
+event
+.
+data
+.
+split
+(
+'
+:
+'
+)
+;
+if
+(
+pieces
+[
+0
+]
+=
+=
+"
+finish
+"
+)
+{
+SimpleTest
+.
+finish
+(
+)
+;
+return
+;
+}
+is
+(
+pieces
+[
+0
+]
+"
+success
+"
+pieces
+[
+1
+]
+)
+;
+}
+window
+.
+addEventListener
+(
+"
+message
+"
+onmessage
+false
+)
+;
 doUpdate
 (
 testUpdate
