Bug 462188:  Fix deletion of words (Ctrl-Backspace/Option-Delete) in HTML editing.  r+sr=peterv
UltraBlame original commit: 9b832d90d637d21c08ea8be077ebee04181e6037

--- a/layout/generic/test/test_backspace_delete.html
+++ b/layout/generic/test/test_backspace_delete.html
@@ -442,6 +442,37 @@ true
 }
 ;
 var
+wordModifiers
+=
+(
+navigator
+.
+platform
+.
+indexOf
+(
+"
+Mac
+"
+)
+>
+=
+0
+)
+?
+{
+altKey
+:
+true
+}
+:
+{
+ctrlKey
+:
+true
+}
+;
+var
 sel
 =
 window
@@ -815,6 +846,144 @@ textContent
 text
 "
 Backspace
+broken
+in
+\
+"
+"
++
+editor
+.
+innerHTML
++
+"
+\
+"
+"
+)
+;
+}
+function
+testDeletePrevWord
+(
+node
+offset
+text
+)
+{
+synthesizeKey
+(
+"
+VK_BACK_SPACE
+"
+wordModifiers
+)
+;
+is
+(
+sel
+.
+anchorNode
+node
+"
+Delete
+previous
+word
+broken
+in
+\
+"
+"
++
+editor
+.
+innerHTML
++
+"
+\
+"
+"
+)
+;
+is
+(
+sel
+.
+anchorOffset
+offset
+"
+Delete
+previous
+word
+broken
+in
+\
+"
+"
++
+editor
+.
+innerHTML
++
+"
+\
+"
+"
+)
+;
+}
+function
+testDeleteNextWord
+(
+node
+offset
+text
+)
+{
+synthesizeKey
+(
+"
+VK_DELETE
+"
+wordModifiers
+)
+;
+is
+(
+sel
+.
+anchorNode
+node
+"
+Delete
+next
+word
+broken
+in
+\
+"
+"
++
+editor
+.
+innerHTML
++
+"
+\
+"
+"
+)
+;
+is
+(
+sel
+.
+anchorOffset
+offset
+"
+Delete
+next
+word
 broken
 in
 \
@@ -1492,6 +1661,211 @@ firstChild
 5
 "
 hello
+"
+)
+;
+/
+/
+Tests
+for
+Bug
+462188
+editor
+.
+innerHTML
+=
+"
+You
+should
+not
+see
+this
+text
+.
+"
+;
+sel
+.
+collapse
+(
+editor
+.
+firstChild
+29
+)
+;
+testDeletePrevWord
+(
+editor
+.
+firstChild
+24
+"
+You
+should
+not
+see
+this
+"
+)
+;
+testDeletePrevWord
+(
+editor
+.
+firstChild
+19
+"
+You
+should
+not
+see
+"
+)
+;
+testDeletePrevWord
+(
+editor
+.
+firstChild
+15
+"
+You
+should
+not
+"
+)
+;
+testDeletePrevWord
+(
+editor
+.
+firstChild
+11
+"
+You
+should
+"
+)
+;
+testDeletePrevWord
+(
+editor
+.
+firstChild
+4
+"
+You
+"
+)
+;
+testDeletePrevWord
+(
+editor
+0
+"
+"
+)
+;
+editor
+.
+innerHTML
+=
+"
+You
+should
+not
+see
+this
+text
+.
+"
+;
+sel
+.
+collapse
+(
+editor
+.
+firstChild
+0
+)
+;
+testDeleteNextWord
+(
+editor
+.
+firstChild
+0
+"
+should
+not
+see
+this
+text
+.
+"
+)
+;
+testDeleteNextWord
+(
+editor
+.
+firstChild
+0
+"
+not
+see
+this
+text
+.
+"
+)
+;
+testDeleteNextWord
+(
+editor
+.
+firstChild
+0
+"
+see
+this
+text
+.
+"
+)
+;
+testDeleteNextWord
+(
+editor
+.
+firstChild
+0
+"
+this
+text
+.
+"
+)
+;
+testDeleteNextWord
+(
+editor
+.
+firstChild
+0
+"
+text
+.
+"
+)
+;
+testDeleteNextWord
+(
+editor
+0
+"
 "
 )
 ;
