Avoid recursion when handling mNegations in CalcWeight.  (Bug 473908)  r+sr=bzbarsky
UltraBlame original commit: 426d1c2661b50254e16f55f3624b60d2421b3937

--- a/layout/style/test/test_cascade.html
+++ b/layout/style/test/test_cascade.html
@@ -906,7 +906,7 @@ cascading
 of
 "
 +
-style_element
+style_contents
 .
 data
 )
@@ -1122,6 +1122,159 @@ div
 "
 true
 1
+)
+;
+function
+do_test_greater
+(
+sel1
+sel2
+)
+{
+do_test
+(
+sel1
+false
+sel2
+false
+1
+)
+;
+do_test
+(
+sel2
+false
+sel1
+false
+2
+)
+;
+}
+function
+do_test_equal
+(
+sel1
+sel2
+)
+{
+do_test
+(
+sel1
+false
+sel2
+false
+2
+)
+;
+do_test
+(
+sel2
+false
+sel1
+false
+2
+)
+;
+}
+/
+/
+Test
+specificity
+of
+contents
+of
+:
+not
+(
+)
+do_test_equal
+(
+"
+div
+.
+content_class
+"
+"
+div
+:
+not
+(
+.
+wrong_class
+)
+"
+)
+;
+do_test_greater
+(
+"
+div
+.
+content_class
+.
+content_class
+"
+"
+div
+.
+content_class
+"
+)
+;
+do_test_greater
+(
+"
+div
+.
+content_class
+"
+"
+div
+"
+)
+;
+do_test_greater
+(
+"
+div
+:
+not
+(
+.
+wrong_class
+)
+"
+"
+div
+"
+)
+;
+do_test_greater
+(
+"
+div
+:
+not
+(
+.
+wrong_class
+)
+:
+not
+(
+.
+wrong_class
+)
+"
+"
+div
+:
+not
+(
+.
+wrong_class
+)
+"
 )
 ;
 <
