Bug 472772. Introduce a separate combobox-text color because some GTK themes need it. r+sr=roc
UltraBlame original commit: 79e8e0d200194783a884c72b5e3d868d0604cc8b

--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -1150,14 +1150,14 @@ color
 -
 moz
 -
-Field
+Combobox
 ;
 color
 :
 -
 moz
 -
-FieldText
+ComboboxText
 ;
 font
 :
@@ -1333,6 +1333,22 @@ vs
 combobox
 *
 /
+background
+-
+color
+:
+-
+moz
+-
+Field
+;
+color
+:
+-
+moz
+-
+FieldText
+;
 vertical
 -
 align
@@ -1383,6 +1399,22 @@ a
 listbox
 *
 /
+background
+-
+color
+:
+-
+moz
+-
+Combobox
+;
+color
+:
+-
+moz
+-
+ComboboxText
+;
 vertical
 -
 align
