--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -6116,6 +6116,58 @@ dropmarker
 *
 *
 *
+resizer
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+/
+resizer
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+resizer
+.
+xml
+#
+resizer
+"
+)
+;
+}
+/
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
 splitter
 *
 *
