--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -732,6 +732,51 @@ button
 )
 ;
 }
+%
+ifdef
+XP_MACOSX
+button
+[
+default
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+button
+.
+xml
+#
+button
+-
+periodic
+-
+redraw
+"
+)
+;
+}
+%
+endif
 button
 [
 type
