Bug 467360, support buttons with child panels, r+sr=neil
UltraBlame original commit: 31d411bd26bc291d010e9e4a079b6c3e1de5156d

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -823,6 +823,14 @@ type
 menu
 "
 ]
+button
+[
+type
+=
+"
+panel
+"
+]
 {
 -
 moz
@@ -949,6 +957,14 @@ type
 =
 "
 menu
+"
+]
+toolbarbutton
+[
+type
+=
+"
+panel
 "
 ]
 {
