Bug 456984 - "New Tab" Customizable Button Needs to Be Added Back. r=dao, r=gavin
UltraBlame original commit: 32d2492bf68ce3faf8dc178d3fd3e05fe0e644ea

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -5013,6 +5013,59 @@ disabled
 #
 new
 -
+tab
+-
+button
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+96px
+24px
+72px
+)
+;
+}
+#
+new
+-
+tab
+-
+button
+[
+disabled
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+24px
+96px
+48px
+72px
+)
+;
+}
+#
+new
+-
 window
 -
 button
@@ -6606,6 +6659,75 @@ state
 =
 disabled
 "
+)
+;
+}
+toolbar
+[
+iconsize
+=
+"
+small
+"
+]
+#
+new
+-
+tab
+-
+button
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+64px
+16px
+48px
+)
+;
+}
+toolbar
+[
+iconsize
+=
+"
+small
+"
+]
+#
+new
+-
+tab
+-
+button
+[
+disabled
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+16px
+64px
+32px
+48px
 )
 ;
 }
@@ -10154,7 +10276,8 @@ important
 }
 /
 *
-New
+Tabstrip
+new
 tab
 button
 *
