--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -6906,6 +6906,105 @@ rect
 -
 -
 -
+TOOLBAR
+NEW
+-
+TAB
+BUTTON
+-
+-
+-
+-
+-
+*
+/
+#
+new
+-
+tab
+-
+button
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+360px
+23px
+324px
+)
+;
+}
+#
+new
+-
+tab
+-
+button
+[
+disabled
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+23px
+360px
+46px
+324px
+)
+;
+}
+#
+new
+-
+tab
+-
+button
+:
+hover
+:
+active
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+46px
+360px
+69px
+324px
+)
+;
+}
+/
+*
+-
+-
+-
+-
+-
 DEFAULT
 NEW
 -
@@ -14807,6 +14906,7 @@ important
 *
 *
 *
+Tabstrip
 New
 Tab
 &
