--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -6262,6 +6262,172 @@ rect
 }
 /
 *
+toolbar
+new
+tab
+button
+*
+/
+toolbar
+:
+not
+(
+[
+iconsize
+=
+"
+small
+"
+]
+)
+#
+new
+-
+tab
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
+padding
+-
+left
+:
+1px
+;
+}
+#
+new
+-
+tab
+-
+button
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+240px
+24px
+216px
+)
+;
+}
+#
+new
+-
+tab
+-
+button
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+:
+hover
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+24px
+240px
+48px
+216px
+)
+;
+}
+#
+new
+-
+tab
+-
+button
+[
+disabled
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+48px
+240px
+72px
+216px
+)
+;
+}
+#
+new
+-
+tab
+-
+button
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+:
+hover
+:
+active
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+96px
+240px
+120px
+216px
+)
+;
+}
+/
+*
 new
 window
 button
@@ -9335,6 +9501,200 @@ rect
 144px
 80px
 128px
+)
+;
+}
+/
+*
+toolbar
+new
+tab
+button
+*
+/
+toolbar
+[
+iconsize
+=
+"
+small
+"
+]
+#
+new
+-
+tab
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
+padding
+-
+left
+:
+1px
+;
+}
+toolbar
+[
+iconsize
+=
+"
+small
+"
+]
+#
+new
+-
+tab
+-
+button
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+160px
+16px
+144px
+)
+;
+}
+toolbar
+[
+iconsize
+=
+"
+small
+"
+]
+#
+new
+-
+tab
+-
+button
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+:
+hover
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+16px
+160px
+32px
+144px
+)
+;
+}
+toolbar
+[
+iconsize
+=
+"
+small
+"
+]
+#
+new
+-
+tab
+-
+button
+[
+disabled
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+32px
+160px
+48px
+144px
+)
+;
+}
+toolbar
+[
+iconsize
+=
+"
+small
+"
+]
+#
+new
+-
+tab
+-
+button
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+:
+hover
+:
+active
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+64px
+160px
+80px
+144px
 )
 ;
 }
@@ -12975,6 +13335,7 @@ important
 Tab
 scrollbox
 arrow
+tabstrip
 new
 tab
 and
