Bug 457651 - New Tab button should be right of last tab. r=dao, r=gavin, ui=faaborg
UltraBlame original commit: 8d6830999439c36130d76c497abb7feb6813a074

--- a/browser/base/content/tabbrowser.css
+++ b/browser/base/content/tabbrowser.css
@@ -255,3 +255,71 @@ moz
 box
 ;
 }
+.
+tabs
+-
+container
+:
+not
+(
+[
+overflow
+=
+"
+true
+"
+]
+)
+>
+.
+tabs
+-
+newtab
+-
+button
+.
+tabs
+-
+container
+[
+overflow
+=
+"
+true
+"
+]
+>
+.
+tabbrowser
+-
+arrowscrollbox
+>
+.
+tabs
+-
+newtab
+-
+button
+{
+visibility
+:
+collapse
+;
+}
+.
+tabs
+-
+newtab
+-
+button
+>
+.
+toolbarbutton
+-
+text
+{
+display
+:
+none
+;
+}
