--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -14945,6 +14945,24 @@ png
 ;
 }
 .
+tabbrowser
+-
+arrowscrollbox
+>
+.
+tabs
+-
+newtab
+-
+button
+{
+padding
+:
+0
+11px
+;
+}
+.
 tabs
 -
 alltabs
@@ -15055,17 +15073,6 @@ rgba
 )
 ;
 }
-.
-tabs
--
-newtab
--
-button
->
-.
-toolbarbutton
--
-text
 .
 tabs
 -
