--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -13627,6 +13627,11 @@ down
 .
 tabs
 -
+container
+>
+.
+tabs
+-
 newtab
 -
 button
@@ -13713,6 +13718,11 @@ chromedir
 rtl
 "
 ]
+.
+tabs
+-
+container
+>
 .
 tabs
 -
@@ -13876,6 +13886,58 @@ tabs
 newtab
 -
 button
+{
+opacity
+:
+.
+8
+;
+}
+.
+tabbrowser
+-
+arrowscrollbox
+>
+.
+tabs
+-
+newtab
+-
+button
+{
+width
+:
+32px
+;
+-
+moz
+-
+border
+-
+radius
+-
+topright
+:
+2px
+;
+-
+moz
+-
+border
+-
+radius
+-
+topleft
+:
+2px
+;
+}
+.
+tabs
+-
+newtab
+-
+button
 >
 .
 toolbarbutton
@@ -13911,27 +13973,7 @@ margin
 0
 0
 ;
--
-moz
--
-margin
--
-end
-:
-2px
-;
 }
-.
-tabs
--
-newtab
--
-button
->
-.
-toolbarbutton
--
-text
 .
 tabs
 -
