--- a/browser/themes/gnomestripe/browser/places/organizer.css
+++ b/browser/themes/gnomestripe/browser/places/organizer.css
@@ -1110,35 +1110,21 @@ margin
 important
 ;
 }
-/
-*
-*
-*
-*
-expanders
-*
-*
-*
-*
-/
-.
-expander
--
-up
-.
-expander
--
-down
-{
-min
--
-width
-:
-0
-;
-}
 %
 endif
+#
+infoBoxExpanderLabel
+{
+-
+moz
+-
+padding
+-
+start
+:
+2px
+;
+}
 #
 searchModifiers
 {
