Backed out bug 462188, changeset 10dfe13222aa, due to mochitest hang.
UltraBlame original commit: df6affd823b8e683f5fd060f8da1c2095b2ded4e

--- a/layout/generic/test/test_backspace_delete.html
+++ b/layout/generic/test/test_backspace_delete.html
@@ -1,30 +1,134 @@
 <
-?
-xml
-version
-=
-"
-1
-.
-0
-"
-?
+!
+DOCTYPE
+HTML
 >
 <
-?
-xml
+html
+>
+<
+head
+>
+<
+title
+>
+Test
+BackSpace
+/
+Delete
+Keys
+<
+/
+title
+>
+<
+meta
+http
 -
-stylesheet
-href
+equiv
 =
 "
-chrome
-:
+Content
+-
+type
+"
+content
+=
+"
+text
 /
+html
+;
+charset
+=
+utf
+-
+8
+"
 /
-global
+>
+<
+script
+type
+=
+"
+text
 /
-skin
+javascript
+"
+src
+=
+"
+/
+MochiKit
+/
+MochiKit
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+/
+tests
+/
+SimpleTest
+/
+SimpleTest
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+/
+tests
+/
+SimpleTest
+/
+EventUtils
+.
+js
+"
+>
+<
+/
+script
+>
+<
+link
+rel
+=
+"
+stylesheet
 "
 type
 =
@@ -33,13 +137,6 @@ text
 /
 css
 "
-?
->
-<
-?
-xml
--
-stylesheet
 href
 =
 "
@@ -52,120 +149,77 @@ test
 .
 css
 "
-type
-=
-"
-text
 /
-css
-"
-?
 >
 <
-window
-xmlns
+/
+head
+>
+<
+body
+>
+<
+p
+id
 =
 "
-http
+display
+"
+>
+<
+/
+p
+>
+<
+div
+id
+=
+"
+content
+"
+style
+=
+"
+display
 :
-/
-/
-www
-.
-mozilla
-.
-org
-/
-keymaster
-/
-gatekeeper
-/
-there
-.
-is
-.
-only
-.
-xul
-"
-xmlns
-:
-html
-=
-"
-http
-:
-/
-/
-www
-.
-w3
-.
-org
-/
-1999
-/
-xhtml
-"
-title
-=
-"
-Test
-BackSpace
-/
-Delete
-Keys
+block
 "
 >
 <
-script
-type
+div
+contentEditable
+id
 =
 "
-application
-/
-javascript
-"
-src
-=
-"
-/
-MochiKit
-/
-packed
-.
-js
+editor
 "
 >
 <
 /
-script
->
-<
-script
-type
-=
-"
-application
-/
-javascript
-"
-src
-=
-"
-/
-tests
-/
-SimpleTest
-/
-SimpleTest
-.
-js
-"
+div
 >
 <
 /
-script
+div
+>
+<
+p
+id
+=
+"
+catch
+"
+>
+Catch
+-
+all
+<
+pre
+id
+=
+"
+test
+"
 >
 <
 script
@@ -177,150 +231,54 @@ testbody
 type
 =
 "
-application
+text
 /
 javascript
+;
+version
+=
+1
+.
+7
 "
 >
-<
-!
-[
-CDATA
-[
-function
-execTests
-(
-)
-{
-var
-e
-=
-document
+/
+*
+*
+Test
+for
+Bug
+157546
+417745
+*
+*
+/
+SimpleTest
 .
-getElementById
-(
-"
-edit
-"
-)
-;
-var
-doc
-=
-e
-.
-contentDocument
-;
-var
-win
-=
-e
-.
-contentWindow
-;
-var
-root
-=
-doc
-.
-documentElement
-;
-var
-editor
-=
-doc
-.
-body
-;
-var
-sel
-=
-win
-.
-getSelection
+waitForExplicitFinish
 (
 )
 ;
 /
 /
-Work
-around
-bug
-474255
--
--
--
-we
-need
+This
+seems
 to
-have
-nonempty
-content
-before
-we
-turn
-on
-/
-/
-editing
-or
-the
-tests
-below
-break
+be
+necessary
 because
 the
-editor
-doesn
-'
-t
-notice
-when
-we
-/
-/
-insert
-non
--
-empty
-content
-using
-innerHTML
-.
-editor
-.
-innerHTML
-=
-"
-Bogus
-!
-"
-;
-doc
-.
-designMode
-=
-'
-on
-'
-;
-win
-.
-focus
+selection
+is
+not
+set
+up
+properly
+otherwise
+setTimeout
 (
-)
-;
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-"
-UniversalXPConnect
-"
+test
+0
 )
 ;
 var
@@ -429,37 +387,81 @@ ex
 }
 }
 function
-doCommand
+test
 (
-cmd
 )
 {
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+"
+UniversalXPConnect
+"
+)
+;
 var
-controller
+wordSelModifiers
+=
+(
+navigator
+.
+platform
+.
+indexOf
+(
+"
+Mac
+"
+)
+>
+=
+0
+)
+?
+{
+shiftKey
+:
+true
+altKey
+:
+true
+}
+:
+{
+shiftKey
+:
+true
+ctrlKey
+:
+true
+}
+;
+var
+sel
+=
+window
+.
+getSelection
+(
+)
+;
+var
+editor
 =
 document
 .
-commandDispatcher
-.
-getControllerForCommand
+getElementById
 (
-cmd
+"
+editor
+"
 )
 ;
-if
-(
-controller
-)
-{
-controller
-.
-doCommand
-(
-cmd
-)
-;
-}
-}
 function
 testRight
 (
@@ -467,16 +469,21 @@ node
 offset
 )
 {
-doCommand
+synthesizeKey
 (
 "
-cmd_charNext
+VK_RIGHT
 "
+{
+}
 )
 ;
-var
-msg
-=
+is
+(
+sel
+.
+anchorNode
+node
 "
 Right
 movement
@@ -493,18 +500,7 @@ innerHTML
 "
 \
 "
-offset
 "
-+
-offset
-;
-is
-(
-sel
-.
-anchorNode
-node
-msg
 )
 ;
 is
@@ -513,7 +509,23 @@ sel
 .
 anchorOffset
 offset
-msg
+"
+Right
+movement
+broken
+in
+\
+"
+"
++
+editor
+.
+innerHTML
++
+"
+\
+"
+"
 )
 ;
 }
@@ -561,11 +573,12 @@ endNode
 endOffset
 )
 {
-doCommand
+synthesizeKey
 (
 "
-cmd_selectWordNext
+VK_RIGHT
 "
+wordSelModifiers
 )
 ;
 var
@@ -647,16 +660,21 @@ offset
 text
 )
 {
-doCommand
+synthesizeKey
 (
 "
-cmd_deleteCharForward
+VK_DELETE
 "
+{
+}
 )
 ;
-var
-msg
-=
+is
+(
+sel
+.
+anchorNode
+node
 "
 Delete
 broken
@@ -672,18 +690,7 @@ innerHTML
 "
 \
 "
-offset
 "
-+
-offset
-;
-is
-(
-sel
-.
-anchorNode
-node
-msg
 )
 ;
 is
@@ -692,7 +699,22 @@ sel
 .
 anchorOffset
 offset
-msg
+"
+Delete
+broken
+in
+\
+"
+"
++
+editor
+.
+innerHTML
++
+"
+\
+"
+"
 )
 ;
 is
@@ -701,7 +723,22 @@ editor
 .
 textContent
 text
-msg
+"
+Delete
+broken
+in
+\
+"
+"
++
+editor
+.
+innerHTML
++
+"
+\
+"
+"
 )
 ;
 }
@@ -713,16 +750,21 @@ offset
 text
 )
 {
-doCommand
+synthesizeKey
 (
 "
-cmd_deleteCharBackward
+VK_BACK_SPACE
 "
+{
+}
 )
 ;
-var
-msg
-=
+is
+(
+sel
+.
+anchorNode
+node
 "
 Backspace
 broken
@@ -738,18 +780,7 @@ innerHTML
 "
 \
 "
-offset
 "
-+
-offset
-;
-is
-(
-sel
-.
-anchorNode
-node
-msg
 )
 ;
 is
@@ -758,41 +789,8 @@ sel
 .
 anchorOffset
 offset
-msg
-)
-;
-is
-(
-editor
-.
-textContent
-text
-msg
-)
-;
-}
-function
-testDeletePrevWord
-(
-node
-offset
-text
-)
-{
-doCommand
-(
 "
-cmd_deleteWordBackward
-"
-)
-;
-var
-msg
-=
-"
-Delete
-previous
-word
+Backspace
 broken
 in
 \
@@ -806,27 +804,7 @@ innerHTML
 "
 \
 "
-offset
 "
-+
-offset
-;
-is
-(
-sel
-.
-anchorNode
-node
-msg
-)
-;
-is
-(
-sel
-.
-anchorOffset
-offset
-msg
 )
 ;
 is
@@ -835,32 +813,8 @@ editor
 .
 textContent
 text
-msg
-)
-;
-}
-function
-testDeleteNextWord
-(
-node
-offset
-text
-)
-{
-doCommand
-(
 "
-cmd_deleteWordForward
-"
-)
-;
-var
-msg
-=
-"
-Delete
-next
-word
+Backspace
 broken
 in
 \
@@ -874,36 +828,7 @@ innerHTML
 "
 \
 "
-offset
 "
-+
-offset
-;
-is
-(
-sel
-.
-anchorNode
-node
-msg
-)
-;
-is
-(
-sel
-.
-anchorOffset
-offset
-msg
-)
-;
-is
-(
-editor
-.
-textContent
-text
-msg
 )
 ;
 }
@@ -1521,10 +1446,6 @@ testDelete
 editor
 .
 firstChild
-.
-nextSibling
-.
-firstChild
 3
 "
 foobar
@@ -1574,216 +1495,6 @@ hello
 "
 )
 ;
-/
-/
-Tests
-for
-Bug
-462188
-editor
-.
-innerHTML
-=
-"
-You
-should
-not
-see
-this
-text
-.
-"
-;
-sel
-.
-collapse
-(
-editor
-.
-firstChild
-0
-)
-;
-testDeleteNextWord
-(
-editor
-.
-firstChild
-0
-"
-\
-u00A0should
-not
-see
-this
-text
-.
-"
-)
-;
-testDeleteNextWord
-(
-editor
-.
-firstChild
-0
-"
-\
-u00A0not
-see
-this
-text
-.
-"
-)
-;
-testDeleteNextWord
-(
-editor
-.
-firstChild
-0
-"
-\
-u00A0see
-this
-text
-.
-"
-)
-;
-testDeleteNextWord
-(
-editor
-.
-firstChild
-0
-"
-\
-u00A0this
-text
-.
-"
-)
-;
-testDeleteNextWord
-(
-editor
-.
-firstChild
-0
-"
-\
-u00A0text
-.
-"
-)
-;
-testDeleteNextWord
-(
-editor
-0
-"
-"
-)
-;
-editor
-.
-innerHTML
-=
-"
-You
-should
-not
-see
-this
-text
-.
-"
-;
-sel
-.
-collapse
-(
-editor
-.
-firstChild
-29
-)
-;
-testDeletePrevWord
-(
-editor
-.
-firstChild
-24
-"
-You
-should
-not
-see
-this
-"
-)
-;
-testDeletePrevWord
-(
-editor
-.
-firstChild
-19
-"
-You
-should
-not
-see
-"
-)
-;
-testDeletePrevWord
-(
-editor
-.
-firstChild
-15
-"
-You
-should
-not
-"
-)
-;
-testDeletePrevWord
-(
-editor
-.
-firstChild
-11
-"
-You
-should
-"
-)
-;
-testDeletePrevWord
-(
-editor
-.
-firstChild
-4
-"
-You
-"
-)
-;
-testDeletePrevWord
-(
-editor
-0
-"
-"
-)
-;
 SimpleTest
 .
 finish
@@ -1791,134 +1502,13 @@ finish
 )
 ;
 }
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-addLoadEvent
-(
-execTests
-)
-;
-]
-]
->
 <
 /
 script
 >
 <
-body
-id
-=
-"
-html_body
-"
-xmlns
-=
-"
-http
-:
-/
-/
-www
-.
-w3
-.
-org
-/
-1999
-/
-xhtml
-"
->
-<
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-462188
-"
->
-Mozilla
-Bug
-462188
-<
-/
-a
->
-<
-p
-id
-=
-"
-display
-"
->
-<
-/
-p
->
-<
-pre
-id
-=
-"
-test
-"
->
-<
 /
 pre
->
-<
-iframe
-id
-=
-"
-edit
-"
-width
-=
-"
-200
-"
-height
-=
-"
-100
-"
-src
-=
-"
-about
-:
-blank
-"
-/
 >
 <
 /
@@ -1926,5 +1516,5 @@ body
 >
 <
 /
-window
+html
 >
