Backing out 24179:ab9665e638d6 due to test failure on linux
UltraBlame original commit: 9631555705972d82815736b505d15f36f81efb37

--- a/layout/base/tests/test_bug435293-skew.html
+++ b/layout/base/tests/test_bug435293-skew.html
@@ -823,55 +823,6 @@ rad
 "
 )
 ;
-/
-/
-For
-test
-1
-we
-need
-to
-handle
-the
-contingency
-that
-different
-systems
-may
-/
-/
-round
-differently
-.
-We
-will
-parse
-out
-the
-values
-and
-compare
-them
-/
-/
-individually
-.
-The
-matrix
-should
-be
-:
-matrix
-(
-1
-0
-0
-.
-57735
-1
-0px
-0px
-)
 var
 style
 =
@@ -891,9 +842,8 @@ test1
 "
 )
 ;
-var
-tformStyle
-=
+is
+(
 style
 .
 getPropertyValue
@@ -905,208 +855,30 @@ moz
 transform
 "
 )
-;
-var
-tformValues
-=
-tformStyle
-.
-substring
-(
-tformStyle
-.
-indexOf
-(
-'
-(
-'
-)
-+
-1
-tformStyle
-.
-indexOf
-(
-'
-)
-'
-)
-)
-.
-split
-(
-'
-'
-)
-;
-is
-(
-(
-+
-tformValues
-[
-0
-]
-)
-1
 "
-Test1
-:
-skewx
-:
-param
-0
-is
+matrix
+(
 1
-"
-)
-;
-is
-(
-(
-+
-tformValues
-[
-1
-]
-)
 0
-"
-Test1
-:
-skewx
-:
-param
-1
-is
-0
-"
-)
-;
-ok
-(
-verifyRounded
-(
-tformValues
-[
-2
-]
 0
 .
 57735
-)
-"
-Test1
-:
-skewx
-:
-Rounded
-param
-2
-is
-in
-bounds
-"
-)
-;
-is
-(
-(
-+
-tformValues
-[
-3
-]
-)
 1
-"
-Test1
-:
-skewx
-:
-param
-3
-is
-1
-"
-)
-;
-is
-(
-tformValues
-[
-4
-]
-.
-trim
-(
-)
-"
 0px
+0px
+)
 "
 "
 Test1
 :
-skewx
-:
-param
-4
-is
-0px
-"
-)
-;
-is
-(
-tformValues
-[
-5
-]
-.
-trim
-(
-)
-"
-0px
-"
-"
-Test1
-:
-skewx
-:
-param
-5
-is
-0px
-"
-)
-;
-/
-/
-Again
-handle
-rounding
-for
-test
-2
+Skewx
 proper
 matrix
-should
-be
-:
-/
-/
-matrix
-(
-1
-1
-.
-73205
-0
-1
-0px
-0px
+is
+applied
+"
 )
+;
 style
 =
 window
@@ -1125,8 +897,8 @@ test2
 "
 )
 ;
-tformStyle
-=
+is
+(
 style
 .
 getPropertyValue
@@ -1138,178 +910,27 @@ moz
 transform
 "
 )
-;
-tformValues
-=
-tformStyle
-.
-substring
-(
-tformStyle
-.
-indexOf
-(
-'
-(
-'
-)
-+
-1
-tformStyle
-.
-indexOf
-(
-'
-)
-'
-)
-)
-.
-split
-(
-'
-'
-)
-;
-is
-(
-(
-+
-tformValues
-[
-0
-]
-)
-1
 "
-Test2
-:
-skewy
-:
-param
-0
-is
-1
-"
-)
-;
-ok
+matrix
 (
-verifyRounded
-(
-tformValues
-[
 1
-]
 1
 .
 73205
-)
-"
-Test2
-:
-skewy
-:
-Rounded
-param
-1
-is
-in
-bounds
-"
-)
-;
-is
-(
-(
-+
-tformValues
-[
-2
-]
-)
 0
-"
-Test2
-:
-skewy
-:
-param
-2
-is
-0
-"
-)
-;
-is
-(
-(
-+
-tformValues
-[
-3
-]
-)
 1
-"
-Test2
-:
-skewy
-:
-param
-3
-is
-1
-"
-)
-;
-is
-(
-tformValues
-[
-4
-]
-.
-trim
-(
-)
-"
 0px
+0px
+)
 "
 "
 Test2
 :
-skewy
-:
-param
-4
+Skewy
+proper
+matrix
 is
-0px
-"
-)
-;
-is
-(
-tformValues
-[
-5
-]
-.
-trim
-(
-)
-"
-0px
-"
-"
-Test2
-:
-skewy
-:
-param
-5
-is
-0px
+applied
 "
 )
 ;
@@ -1562,41 +1183,6 @@ units
 "
 )
 ;
-/
-/
-Test
-8
-:
-skew
-with
-negative
-degrees
-here
-again
-we
-must
-handle
-rounding
-.
-/
-/
-The
-matrix
-should
-be
-:
-matrix
-(
-1
-3
-.
-73206
--
-1
-1
-0px
-0px
-)
 style
 =
 window
@@ -1615,8 +1201,8 @@ test8
 "
 )
 ;
-tformStyle
-=
+is
+(
 style
 .
 getPropertyValue
@@ -1628,165 +1214,27 @@ moz
 transform
 "
 )
-;
-tformValues
-=
-tformStyle
-.
-substring
-(
-tformStyle
-.
-indexOf
-(
-'
-(
-'
-)
-+
-1
-tformStyle
-.
-indexOf
-(
-'
-)
-'
-)
-)
-.
-split
-(
-'
-'
-)
-;
-is
-(
-tformValues
-[
-0
-]
-1
 "
-Test8
-:
-param
-0
-is
-1
-"
-)
-;
-ok
+matrix
 (
-verifyRounded
-(
-tformValues
-[
 1
-]
 3
 .
 73206
-)
-"
-Test8
-:
-Rounded
-param
-1
-is
-in
-bounds
-"
-)
-;
-is
-(
-(
-+
-tformValues
-[
-2
-]
-)
 -
 1
-"
-Test8
-:
-param
-2
-is
--
 1
-"
-)
-;
-is
-(
-(
-+
-tformValues
-[
-3
-]
-)
-1
-"
-Test8
-:
-param
-3
-is
-1
-"
-)
-;
-is
-(
-tformValues
-[
-4
-]
-.
-trim
-(
-)
-"
 0px
+0px
+)
 "
 "
 Test8
 :
-param
-4
-is
-0px
-"
-)
-;
-is
-(
-tformValues
-[
-5
-]
-.
-trim
-(
-)
-"
-0px
-"
-"
-Test8
-:
-param
-5
-is
-0px
+Skew
+with
+negative
+degrees
 "
 )
 ;
@@ -1944,64 +1392,6 @@ numbers
 "
 )
 ;
-}
-/
-/
-Verifies
-that
-aVal
-is
-+
-/
--
-0
-.
-00001
-of
-aTrueVal
-/
-/
-Returns
-true
-if
-so
-false
-if
-not
-function
-verifyRounded
-(
-aVal
-aTrueVal
-)
-{
-if
-(
-Math
-.
-abs
-(
-aVal
--
-aTrueVal
-)
-<
-=
-0
-.
-00001
-)
-{
-return
-true
-;
-}
-else
-{
-return
-false
-;
-}
 }
 <
 /
