--- a/toolkit/content/widgets/videocontrols.css
+++ b/toolkit/content/widgets/videocontrols.css
@@ -63,3 +63,33 @@ opacity
 0
 ;
 }
+.
+scrubber
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+videocontrols
+.
+xml
+#
+suppressChangeEvent
+"
+)
+;
+}
