--- a/toolkit/themes/pinstripe/global/media/videocontrols.css
+++ b/toolkit/themes/pinstripe/global/media/videocontrols.css
@@ -31,7 +31,7 @@ controlBar
 {
 height
 :
-24px
+28px
 ;
 background
 -
@@ -104,13 +104,13 @@ min
 -
 height
 :
-24px
+28px
 ;
 min
 -
 width
 :
-24px
+28px
 ;
 }
 .
@@ -203,13 +203,13 @@ min
 -
 height
 :
-24px
+28px
 ;
 min
 -
 width
 :
-24px
+33px
 ;
 }
 .
@@ -244,5 +244,355 @@ no
 -
 repeat
 center
+;
+}
+.
+backgroundBar
+{
+/
+*
+make
+bar
+8px
+tall
+(
+control
+height
+=
+28
+minus
+2
+*
+10
+margin
+)
+*
+/
+margin
+-
+top
+:
+10px
+;
+margin
+-
+bottom
+:
+10px
+;
+background
+-
+color
+:
+rgba
+(
+255
+255
+255
+0
+.
+5
+)
+;
+-
+moz
+-
+border
+-
+radius
+:
+4px
+4px
+;
+}
+.
+bufferBar
+.
+progressBar
+{
+/
+*
+make
+bar
+8px
+tall
+(
+control
+height
+=
+28
+minus
+2
+*
+10
+margin
+)
+*
+/
+margin
+:
+10px
+0px
+10px
+0px
+;
+-
+moz
+-
+appearance
+:
+none
+;
+min
+-
+width
+:
+0px
+;
+}
+/
+*
+.
+progress
+-
+bar
+is
+an
+element
+inside
+the
+<
+progressmeter
+>
+implementation
+.
+*
+/
+.
+bufferBar
+.
+progress
+-
+bar
+{
+/
+*
+*
+Note
+that
+this
+is
+drawn
+on
+top
+of
+the
+.
+backgroundBar
+.
+So
+although
+this
+*
+has
+the
+same
+background
+-
+color
+specified
+the
+semitransparent
+*
+compositing
+gives
+it
+a
+different
+visual
+appearance
+.
+*
+/
+background
+-
+color
+:
+rgba
+(
+255
+255
+255
+0
+.
+5
+)
+;
+-
+moz
+-
+border
+-
+radius
+:
+4px
+4px
+;
+}
+.
+progressBar
+.
+progress
+-
+bar
+{
+background
+-
+color
+:
+white
+;
+-
+moz
+-
+border
+-
+radius
+:
+4px
+4px
+;
+}
+/
+*
+.
+scale
+-
+slider
+is
+an
+element
+inside
+the
+<
+scale
+>
+implementation
+.
+*
+/
+.
+scale
+-
+slider
+{
+/
+*
+Hide
+the
+default
+horizontal
+bar
+.
+*
+/
+-
+moz
+-
+appearance
+:
+none
+;
+background
+:
+none
+;
+margin
+:
+0
+;
+}
+/
+*
+.
+scale
+-
+thumb
+is
+an
+element
+inside
+the
+<
+scale
+>
+implementation
+.
+*
+/
+.
+scale
+-
+thumb
+{
+/
+*
+Override
+the
+default
+thumb
+appearance
+with
+a
+custom
+image
+.
+*
+/
+-
+moz
+-
+appearance
+:
+none
+;
+background
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+skin
+/
+media
+/
+scrubberThumb
+.
+png
+)
+no
+-
+repeat
+center
+;
+border
+:
+none
+;
+min
+-
+width
+:
+11px
+;
+min
+-
+height
+:
+20px
 ;
 }
