Bug 475082 - New Tab button should look like a background tab on OS X. r=gavin
UltraBlame original commit: b7329ed38bd29579066108c03ff7d2813cc3487c

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -879,6 +879,32 @@ true
 tabbrowser
 -
 tab
+#
+main
+-
+window
+:
+not
+(
+[
+active
+=
+"
+true
+"
+]
+)
+.
+tabbrowser
+-
+arrowscrollbox
+>
+.
+tabs
+-
+newtab
+-
+button
 {
 color
 :
@@ -13172,12 +13198,6 @@ png
 "
 )
 ;
-opacity
-:
-0
-.
-6
-;
 margin
 -
 top
@@ -13278,7 +13298,22 @@ tabbrowser
 -
 tab
 :
+not
+(
+:
 hover
+)
+:
+not
+(
+[
+selected
+=
+"
+true
+"
+]
+)
 >
 .
 tab
@@ -13289,25 +13324,30 @@ image
 .
 tabbrowser
 -
-tab
-[
-selected
-=
-"
-true
-"
-]
+arrowscrollbox
 >
 .
-tab
+tabs
+-
+newtab
+-
+button
+:
+not
+(
+:
+hover
+)
+>
+.
+toolbarbutton
 -
 icon
--
-image
 {
 opacity
 :
-1
+.
+6
 ;
 }
 .
@@ -13361,6 +13401,17 @@ rgba
 tabbrowser
 -
 tab
+.
+tabbrowser
+-
+arrowscrollbox
+>
+.
+tabs
+-
+newtab
+-
+button
 {
 -
 moz
@@ -13387,9 +13438,9 @@ color
 222
 ;
 margin
--
-bottom
 :
+0
+0
 1px
 ;
 -
@@ -13549,23 +13600,6 @@ height
 :
 24px
 ;
-}
-.
-tabbrowser
--
-tab
-:
-not
-(
-[
-selected
-=
-"
-true
-"
-]
-)
-{
 background
 -
 image
@@ -13700,6 +13734,12 @@ rgba
 .
 2
 )
+;
+background
+-
+image
+:
+none
 ;
 background
 -
@@ -14918,6 +14958,11 @@ Buttons
 .
 tabs
 -
+container
+>
+.
+tabs
+-
 newtab
 -
 button
@@ -15045,24 +15090,6 @@ png
 ;
 }
 .
-tabbrowser
--
-arrowscrollbox
->
-.
-tabs
--
-newtab
--
-button
-{
-padding
-:
-0
-11px
-;
-}
-.
 tabs
 -
 alltabs
@@ -15108,6 +15135,11 @@ png
 .
 tabs
 -
+container
+>
+.
+tabs
+-
 newtab
 -
 button
@@ -15137,6 +15169,11 @@ rgba
 )
 ;
 }
+.
+tabs
+-
+container
+>
 .
 tabs
 -
