Bug 474693 - cursor (pointer) over scrollcorner is the wrong one (ugly nwse-resize instead of good se-resize); r=dao
UltraBlame original commit: 8c2b629e1bb8c65a29a1cb1b9ff82202f7d9e1e0

--- a/toolkit/themes/pinstripe/global/resizer.css
+++ b/toolkit/themes/pinstripe/global/resizer.css
@@ -82,6 +82,14 @@ dir
 topleft
 "
 ]
+{
+cursor
+:
+nw
+-
+resize
+;
+}
 resizer
 [
 dir
@@ -108,7 +116,7 @@ ltr
 {
 cursor
 :
-nwse
+se
 -
 resize
 ;
@@ -121,6 +129,14 @@ dir
 topright
 "
 ]
+{
+cursor
+:
+ne
+-
+resize
+;
+}
 resizer
 [
 dir
@@ -147,7 +163,7 @@ rtl
 {
 cursor
 :
-nesw
+sw
 -
 resize
 ;
