Bug 467672 - need additional bidi.numerals setting for Persian (eastern Arabic-Indic) numerals; r=roc,jfkthame sr=roc
UltraBlame original commit: 3470b0b3a98d28a6a14236f461d31ab6ec0e6af5

--- a/layout/base/tests/test_bug441782.html
+++ b/layout/base/tests/test_bug441782.html
@@ -674,7 +674,20 @@ var
 passes
 =
 [
+/
+/
+bug
+441782
+tests
+(
+Arabic
+)
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 1
@@ -689,6 +702,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 1
@@ -703,6 +721,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 1
@@ -717,6 +740,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 1
@@ -731,6 +759,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 1
@@ -745,6 +778,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 2
@@ -759,6 +797,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 2
@@ -773,6 +816,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 2
@@ -787,6 +835,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 2
@@ -801,6 +854,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 2
@@ -815,6 +873,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 3
@@ -829,6 +892,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 3
@@ -843,6 +911,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 3
@@ -857,6 +930,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 3
@@ -871,6 +949,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 3
@@ -885,6 +968,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 4
@@ -899,6 +987,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 4
@@ -913,6 +1006,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 4
@@ -927,6 +1025,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 4
@@ -941,6 +1044,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 4
@@ -955,6 +1063,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 5
@@ -969,6 +1082,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 5
@@ -983,6 +1101,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 5
@@ -997,6 +1120,11 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 5
@@ -1011,12 +1139,692 @@ op
 "
 }
 {
+prefix
+:
+"
+bug441782
+"
 file
 :
 5
 bidiNumeralValue
 :
 4
+op
+:
+"
+=
+=
+"
+}
+/
+/
+bug
+467672
+tests
+(
+Arabic
+and
+Persian
+)
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+1
+bidiNumeralValue
+:
+0
+op
+:
+"
+!
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+1
+bidiNumeralValue
+:
+1
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+1
+bidiNumeralValue
+:
+2
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+1
+bidiNumeralValue
+:
+3
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+1
+bidiNumeralValue
+:
+4
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+1
+bidiNumeralValue
+:
+5
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+1
+bidiNumeralValue
+:
+6
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+2
+bidiNumeralValue
+:
+0
+op
+:
+"
+!
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+2
+bidiNumeralValue
+:
+1
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+2
+bidiNumeralValue
+:
+2
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+2
+bidiNumeralValue
+:
+3
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+2
+bidiNumeralValue
+:
+4
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+2
+bidiNumeralValue
+:
+5
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+2
+bidiNumeralValue
+:
+6
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+3
+bidiNumeralValue
+:
+0
+op
+:
+"
+!
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+3
+bidiNumeralValue
+:
+1
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+3
+bidiNumeralValue
+:
+2
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+3
+bidiNumeralValue
+:
+3
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+3
+bidiNumeralValue
+:
+4
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+3
+bidiNumeralValue
+:
+5
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+3
+bidiNumeralValue
+:
+6
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+4
+bidiNumeralValue
+:
+0
+op
+:
+"
+!
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+4
+bidiNumeralValue
+:
+1
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+4
+bidiNumeralValue
+:
+2
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+4
+bidiNumeralValue
+:
+3
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+4
+bidiNumeralValue
+:
+4
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+4
+bidiNumeralValue
+:
+5
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+4
+bidiNumeralValue
+:
+6
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+5
+bidiNumeralValue
+:
+0
+op
+:
+"
+!
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+5
+bidiNumeralValue
+:
+1
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+5
+bidiNumeralValue
+:
+2
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+5
+bidiNumeralValue
+:
+3
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+5
+bidiNumeralValue
+:
+4
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+5
+bidiNumeralValue
+:
+5
+op
+:
+"
+=
+=
+"
+}
+{
+prefix
+:
+"
+bug467672
+"
+file
+:
+5
+bidiNumeralValue
+:
+6
 op
 :
 "
@@ -1162,6 +1970,8 @@ of
 reftest
 "
 +
+fileprefix
++
 passes
 [
 currentPass
@@ -1217,6 +2027,8 @@ Rendering
 of
 reftest
 "
++
+fileprefix
 +
 passes
 [
@@ -1283,6 +2095,20 @@ finish
 }
 }
 var
+fileprefix
+=
+passes
+[
+currentPass
+]
+.
+prefix
++
+"
+-
+"
+;
+var
 file
 =
 passes
@@ -1317,6 +2143,8 @@ Testing
 reftest
 "
 +
+fileprefix
++
 file
 +
 "
@@ -1334,6 +2162,17 @@ currentPass
 ]
 .
 bidiNumeralValue
++
+"
+expecting
+"
++
+passes
+[
+currentPass
+]
+.
+op
 )
 )
 ;
@@ -1362,10 +2201,7 @@ testCanvas
 new
 RemoteCanvas
 (
-"
-bug441782
--
-"
+fileprefix
 +
 file
 +
@@ -1394,10 +2230,7 @@ refCanvas
 new
 RemoteCanvas
 (
-"
-bug441782
--
-"
+fileprefix
 +
 file
 +
