--- a/toolkit/content/plugins.css
+++ b/toolkit/content/plugins.css
@@ -675,7 +675,7 @@ text
 -
 align
 :
-left
+start
 ;
 font
 -
@@ -722,7 +722,7 @@ text
 -
 align
 :
-left
+start
 ;
 width
 :
@@ -780,9 +780,12 @@ td
 +
 td
 {
+-
+moz
+-
 border
 -
-left
+start
 :
 1px
 dotted
@@ -795,7 +798,7 @@ text
 -
 align
 :
-left
+start
 ;
 border
 -
