Bug 427021 - [RTL] Wizard widget should get mirrored buttons on GTK; r=dao
UltraBlame original commit: 3d2cbfcf9217b5eed3c49c33454440f506650ea4

--- a/toolkit/themes/gnomestripe/global/button.css
+++ b/toolkit/themes/gnomestripe/global/button.css
@@ -3177,6 +3177,8 @@ gtk
 go
 -
 forward
+-
+ltr
 ?
 size
 =
@@ -3229,6 +3231,127 @@ gtk
 go
 -
 forward
+-
+ltr
+?
+size
+=
+button
+&
+state
+=
+disabled
+"
+)
+;
+}
+button
+[
+icon
+=
+"
+go
+-
+forward
+"
+]
+[
+chromedir
+=
+"
+rtl
+"
+]
+.
+button
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+go
+-
+forward
+-
+rtl
+?
+size
+=
+button
+"
+)
+;
+}
+button
+[
+icon
+=
+"
+go
+-
+forward
+"
+]
+[
+chromedir
+=
+"
+rtl
+"
+]
+[
+disabled
+=
+"
+true
+"
+]
+.
+button
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+go
+-
+forward
+-
+rtl
 ?
 size
 =
@@ -3278,6 +3401,8 @@ gtk
 go
 -
 back
+-
+ltr
 ?
 size
 =
@@ -3330,6 +3455,127 @@ gtk
 go
 -
 back
+-
+ltr
+?
+size
+=
+button
+&
+state
+=
+disabled
+"
+)
+;
+}
+button
+[
+icon
+=
+"
+go
+-
+back
+"
+]
+[
+chromedir
+=
+"
+rtl
+"
+]
+.
+button
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+go
+-
+back
+-
+rtl
+?
+size
+=
+button
+"
+)
+;
+}
+button
+[
+icon
+=
+"
+go
+-
+back
+"
+]
+[
+chromedir
+=
+"
+rtl
+"
+]
+[
+disabled
+=
+"
+true
+"
+]
+.
+button
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+go
+-
+back
+-
+rtl
 ?
 size
 =
