--- a/layout/reftests/font-face/sheet-set-switch-1-ref.html
+++ b/layout/reftests/font-face/sheet-set-switch-1-ref.html
@@ -103,7 +103,7 @@ font
 family
 :
 "
-MarkXMark2Y
+Mark2D
 "
 ;
 src
@@ -115,7 +115,34 @@ url
 /
 fonts
 /
-markXmark2Y
+mark2D
+.
+ttf
+)
+;
+}
+font
+-
+face
+{
+font
+-
+family
+:
+"
+MarkB
+"
+;
+src
+:
+url
+(
+.
+.
+/
+fonts
+/
+markB
 .
 ttf
 )
@@ -128,7 +155,10 @@ font
 family
 :
 "
-MarkXMark2Y
+Mark2D
+"
+"
+MarkB
 "
 ;
 }
@@ -146,7 +176,7 @@ body
 <
 p
 >
-AYX
+ADB
 <
 /
 p
