--- a/layout/reftests/font-face/order-3-ref.html
+++ b/layout/reftests/font-face/order-3-ref.html
@@ -103,7 +103,7 @@ font
 family
 :
 "
-MarkXMark2Y
+MarkD
 "
 ;
 src
@@ -115,7 +115,34 @@ url
 /
 fonts
 /
-markXmark2Y
+markD
+.
+ttf
+)
+;
+}
+font
+-
+face
+{
+font
+-
+family
+:
+"
+Mark2A
+"
+;
+src
+:
+url
+(
+.
+.
+/
+fonts
+/
+mark2A
 .
 ttf
 )
@@ -128,7 +155,10 @@ font
 family
 :
 "
-MarkXMark2Y
+MarkD
+"
+"
+Mark2A
 "
 ;
 }
@@ -146,7 +176,7 @@ body
 <
 p
 >
-XYC
+DAC
 <
 /
 p
