Bug 476364 - disabled button and menulist color is hardcoded, should use native color. r=enndeakin
UltraBlame original commit: 4c297a9717d22aeca73c3fde0d9a4f2c66c115af

--- a/toolkit/themes/pinstripe/global/menulist.css
+++ b/toolkit/themes/pinstripe/global/menulist.css
@@ -657,6 +657,24 @@ moz
 DialogText
 ;
 }
+listbox
+menulist
+:
+not
+(
+[
+disabled
+]
+)
+{
+color
+:
+-
+moz
+-
+DialogText
+;
+}
 .
 menulist
 -
@@ -790,10 +808,7 @@ true
 {
 color
 :
-#
-777777
-!
-important
+GrayText
 ;
 }
 menulist
@@ -810,9 +825,12 @@ menulist
 -
 dropmarker
 {
+-
+moz
+-
 padding
 -
-left
+start
 :
 7px
 !
@@ -1283,9 +1301,12 @@ menulist
 -
 dropmarker
 {
+-
+moz
+-
 margin
 -
-left
+start
 :
 2px
 ;
@@ -1369,21 +1390,5 @@ background
 color
 :
 ThreeDShadow
-;
-}
-listbox
-menulist
-:
-not
-(
-[
-disabled
-]
-)
-{
-color
-:
-#
-000
 ;
 }
