Bug 476360 - some inner button margins ignore the chrome direction. r=enndeakin
UltraBlame original commit: 440856b938d1509ccd9c2f1d76ac52cad15f9c6c

--- a/toolkit/themes/pinstripe/global/button.css
+++ b/toolkit/themes/pinstripe/global/button.css
@@ -675,9 +675,28 @@ text
 margin
 :
 0
-2px
-0
+!
+important
+;
+-
+moz
+-
+margin
+-
+start
+:
 3px
+!
+important
+;
+-
+moz
+-
+margin
+-
+end
+:
+2px
 !
 important
 ;
@@ -693,9 +712,12 @@ button
 -
 icon
 {
+-
+moz
+-
 margin
 -
-left
+start
 :
 1px
 ;
